# Vigil

./: .env.example  .gitignore  AGENTS.md  BACKLOG.md  CLAUDE.md  CLOUD.md  CONSTRAINTS.md  EXCISION_PLAN.md  FEATURES.md  GITHUB_ACTIONS_SETUP.md  GLOSSARY.md  HANDOFF.md  HYPOTHESES.md  KRONOS_POWER.md  LIMITATIONS.md  NEXT_IDEAS.md  ORACLE_SETUP.md  PLAN.md  PROCESSING_ROUTES.md  PROJECT_LOG.md  README.md  REFINED_PLAN.md  REFINED_PLAN_v2.md  REVIEW_AND_CONTINUATION.md  ROADMAP.md  STARTUP.md  TUTORIAL.md  Vigil  Vigil Full Stack.command  Vigil.command  index.html  pyproject.toml  requirements.txt  worker_token.rtf
deploy/: pod-backtest.sh  pod-status.sh  runpod-serve.sh  setup-oracle.sh  vigil-bot.service  vigil-portfolio.service  vigil-portfolio.timer  vigil-signals.service  vigil-signals.timer  vigil-worker.service
kronos_service/: main.py  predictor.py
outputs/: forecast_calibration.json
scanner/: anomaly_study.py  asset_registry.py  backtest.py  cache.py  calibrate.py  config.py  daily_board.py  dataquality.py  entry_exit.py  evidence_scores.py  factor_backtest.py  factor_models.py  factors.py  forecast_calibration.py  fundamentals.py  horizon.py  index_components.py  index_constituents.py  indicators.py  intraday.py  kronos_client.py  kronos_features.py  labstats.py  market_data.py  meta_model.py  names.py  notify.py  openalice_client.py  opportunity_ranker.py  options.py  output.py  paper.py  portfolio.py  regime.py  report_generator.py  run.py  sanity.py  scoring.py  screener.py  server.py  (+9 more)
serverless/: Dockerfile  README.md  handler.py
ui/: index.html
(+30 files in other folders)
