[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scanner"
version = "0.1.0"
description = "Kronos + OpenAlice investment opportunity scanner"
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools]
packages = ["scanner", "kronos_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires a live OpenAlice MCP server and Kronos service",
]
